// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jEWOvK cuOklv"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jEWOvK cuOklv"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jEWOvK cuOklv"
>
  <span
    className="sc-iAUoVB exciri"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jEWOvK cuOklv"
>
  <div
    className="sc-gICdPL gXSzJu"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jEWOvK dMZOng"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jEWOvK laGitA"
  size="small"
/>
`;
